--- a/NinJump/Motor2D/Motor2D.vcxproj
+++ b/NinJump/Motor2D/Motor2D.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="j1Enemy_Flying.cpp" />
     <ClCompile Include="j1Collision.cpp" />
     <ClCompile Include="j1Enemies.cpp" />
     <ClCompile Include="j1Entity_Manager.cpp" />
@@ -97,6 +98,7 @@
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="j1Enemy_Flying.h" />
     <ClInclude Include="j1Entity.h" />
     <ClInclude Include="j1Enemies.h" />
     <ClInclude Include="j1Collision.h" />
