--- a/NinJump/Motor2D/Motor2D.vcxproj.filters
+++ b/NinJump/Motor2D/Motor2D.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="j1Enemy_Flying.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="j1Entity.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h">
