--- a/NinJump/Motor2D/Motor2D.vcxproj
+++ b/NinJump/Motor2D/Motor2D.vcxproj
@@ -79,6 +79,7 @@
     <ClCompile Include="j1Enemy_Flying.cpp" />
     <ClCompile Include="j1Collision.cpp" />
     <ClCompile Include="j1Enemies.cpp" />
+    <ClCompile Include="j1Enemy_Walker.cpp" />
     <ClCompile Include="j1Entity.cpp" />
     <ClCompile Include="j1Entity_Manager.cpp" />
     <ClCompile Include="j1FadeBlack.cpp" />
@@ -100,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Enemy_Flying.h" />
+    <ClInclude Include="j1Enemy_Walker.h" />
     <ClInclude Include="j1Entity.h" />
     <ClInclude Include="j1Enemies.h" />
     <ClInclude Include="j1Collision.h" />
