--- a/NinJump/Motor2D/Motor2D.vcxproj.filters
+++ b/NinJump/Motor2D/Motor2D.vcxproj.filters
@@ -67,6 +67,9 @@
     <ClCompile Include="j1Enemy_Walker.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="j1Player_Entity.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h">
@@ -151,6 +154,9 @@
       <Filter>Entities</Filter>
     </ClInclude>
     <ClInclude Include="j1Enemy_Walker.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Player_Entity.h">
       <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
