--- a/NinJump/Motor2D/Motor2D.vcxproj
+++ b/NinJump/Motor2D/Motor2D.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="j1Collision.cpp" />
     <ClCompile Include="j1Enemy_Walker.cpp" />
     <ClCompile Include="j1Entity.cpp" />
+    <ClCompile Include="j1Entity_Coin.cpp" />
     <ClCompile Include="j1Entity_Manager.cpp" />
     <ClCompile Include="j1FadeBlack.cpp" />
     <ClCompile Include="j1Main.cpp" />
@@ -103,6 +104,7 @@
     <ClInclude Include="j1Enemy_Walker.h" />
     <ClInclude Include="j1Entity.h" />
     <ClInclude Include="j1Collision.h" />
+    <ClInclude Include="j1Entity_Coin.h" />
     <ClInclude Include="j1Entity_Manager.h" />
     <ClInclude Include="j1FadeBlack.h" />
     <ClInclude Include="j1Map.h" />
