--- a/NinJump/Motor2D/Motor2D.vcxproj.filters
+++ b/NinJump/Motor2D/Motor2D.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClCompile Include="j1Player_Entity.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="j1Entity_Coin.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h">
@@ -145,6 +148,9 @@
       <Filter>Entities</Filter>
     </ClInclude>
     <ClInclude Include="j1Player_Entity.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Entity_Coin.h">
       <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
