--- a/NinJump/Motor2D/Motor2D.vcxproj
+++ b/NinJump/Motor2D/Motor2D.vcxproj
@@ -83,6 +83,10 @@
     <ClCompile Include="j1Entity_Coin.cpp" />
     <ClCompile Include="j1Entity_Manager.cpp" />
     <ClCompile Include="j1FadeBlack.cpp" />
+    <ClCompile Include="j1Fonts.cpp" />
+    <ClCompile Include="j1Gui.cpp" />
+    <ClCompile Include="j1Gui_Image.cpp" />
+    <ClCompile Include="j1Gui_Label.cpp" />
     <ClCompile Include="j1Main.cpp" />
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="j1Audio.cpp" />
@@ -108,6 +112,11 @@
     <ClInclude Include="j1Entity_Coin.h" />
     <ClInclude Include="j1Entity_Manager.h" />
     <ClInclude Include="j1FadeBlack.h" />
+    <ClInclude Include="j1Fonts.h" />
+    <ClInclude Include="j1Gui.h" />
+    <ClInclude Include="j1Gui_Image.h" />
+    <ClInclude Include="j1Gui_Label.h" />
+    <ClInclude Include="J1Gui_Object.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Pathfinding.h" />
     <ClInclude Include="j1PerfTimer.h" />
