--- a/NinJump/Motor2D/Motor2D.vcxproj.filters
+++ b/NinJump/Motor2D/Motor2D.vcxproj.filters
@@ -70,6 +70,18 @@
     <ClCompile Include="j1Shuriken.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="j1Fonts.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="j1Gui.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="j1Gui_Image.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="j1Gui_Label.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h">
@@ -159,6 +171,21 @@
     <ClInclude Include="j1Shuriken.h">
       <Filter>Entities</Filter>
     </ClInclude>
+    <ClInclude Include="j1Fonts.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Gui.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Gui_Image.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Gui_Label.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="J1Gui_Object.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
@@ -175,6 +202,9 @@
     </Filter>
     <Filter Include="p2Help">
       <UniqueIdentifier>{220ecdb7-ed4d-4f1e-ae2c-fb46d77c512f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GUI">
+      <UniqueIdentifier>{442c727e-30c1-4da2-9ad3-85a0cad662bd}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
