--- a/NinJump/Motor2D/Motor2D.vcxproj
+++ b/NinJump/Motor2D/Motor2D.vcxproj
@@ -85,6 +85,7 @@
     <ClCompile Include="j1FadeBlack.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Gui.cpp" />
+    <ClCompile Include="j1Gui_Button.cpp" />
     <ClCompile Include="j1Gui_Image.cpp" />
     <ClCompile Include="j1Gui_Label.cpp" />
     <ClCompile Include="j1Main.cpp" />
@@ -115,6 +116,7 @@
     <ClInclude Include="j1FadeBlack.h" />
     <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1Gui.h" />
+    <ClInclude Include="j1Gui_Button.h" />
     <ClInclude Include="j1Gui_Image.h" />
     <ClInclude Include="j1Gui_Label.h" />
     <ClInclude Include="J1Gui_Object.h" />
