solve coin crash, but player carsh? (Descr)
entity clean up called detroy, and destroy called again clean up, which was a mistake

--- a/NinJump/Motor2D/Motor2D.vcxproj.filters
+++ b/NinJump/Motor2D/Motor2D.vcxproj.filters
@@ -196,7 +196,7 @@
       <Filter>GUI\Menu</Filter>
     </ClInclude>
     <ClInclude Include="j1Fonts.h">
-      <Filter>GUI\help</Filter>
+      <Filter>GUI\Menu</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
