--- a/NinJump/Motor2D/Motor2D.vcxproj
+++ b/NinJump/Motor2D/Motor2D.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="j1Gui_Button.cpp" />
     <ClCompile Include="j1Gui_Image.cpp" />
     <ClCompile Include="j1Gui_Label.cpp" />
+    <ClCompile Include="j1Gui_Slider.cpp" />
     <ClCompile Include="j1Main.cpp" />
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="j1Audio.cpp" />
@@ -120,6 +121,7 @@
     <ClInclude Include="j1Gui_Image.h" />
     <ClInclude Include="j1Gui_Label.h" />
     <ClInclude Include="J1Gui_Object.h" />
+    <ClInclude Include="j1Gui_Slider.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Pathfinding.h" />
     <ClInclude Include="j1PerfTimer.h" />
